# is.equal

./: LICENSE  README.rst  pyproject.toml
is_equal/: __init__.py  comparator.py  hasher.py
